k8/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: myapp
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: http
      port: 80
      targetPort: 80
